npm install @wdio/cli

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/AkshayBamne/Zippia-Selenium-Test-Project#readme",
   "devDependencies": {
     "webdriverio": "^7.16.0"
+  },
+  "dependencies": {
+    "@wdio/cli": "^7.16.0"
   }
 }
