--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/AkshayBamne/Zippia-Selenium-Test-Project#readme",
   "devDependencies": {
+    "@rpii/wdio-html-reporter": "^7.7.1",
+    "@wdio/allure-reporter": "^7.16.0",
+    "@wdio/local-runner": "^7.16.0",
+    "@wdio/mocha-framework": "^7.16.0",
+    "@wdio/spec-reporter": "^7.16.0",
+    "chromedriver": "^94.0.0",
+    "wdio-chromedriver-service": "^7.2.2",
+    "wdio-video-reporter": "^3.1.2",
     "webdriverio": "^7.16.0"
   },
   "dependencies": {
