--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wdio/mocha-framework": "^7.16.0",
     "@wdio/spec-reporter": "^7.16.0",
     "chai": "^4.3.4",
+    "chai-webdriverio": "^1.0.0",
     "chromedriver": "^94.0.0",
     "wdio-chromedriver-service": "^7.2.2",
     "wdio-video-reporter": "^3.1.2",
