--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.3.4",
     "chai-webdriverio": "^1.0.0",
     "chromedriver": "^94.0.0",
+    "local-runner": "^0.1.1-alpha",
     "wdio-chromedriver-service": "^7.2.2",
     "wdio-video-reporter": "^3.1.2",
     "webdriverio": "^7.16.0"
