--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "This is selenium test project for Zippia",
   "main": "index.js",
   "scripts": {
+
     "test": "npx wdio run wdio.conf.js",
-    "report": "allure serve reports/allure-results"
+    "report": "allure serve allure-results"
+  
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "webdriverio": "^7.16.0"
   },
   "dependencies": {
-    "@wdio/cli": "^7.16.0"
+    "@wdio/cli": "^7.16.0",
+    "allure-commandline": "^2.13.8"
   }
 }
