--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx wdio run wdio.conf.js",
-    "update": "npx npm-check-updates --upgrade && npm install && npm audit fix",
-    "report": "allure serve allure-results",
-    "report1": "allure generate ./allure-results/ --clean && allure serve allure-results"
+    "update": "npx npm-check-updates --upgrade && npm install && npm audit fix",   
+    "report": "allure generate ./allure-results/ --clean && allure serve allure-results"
   },
   "repository": {
     "type": "git",
